// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component PollItem PollItem renders correctly 1`] = `
<View
  style={
    Object {
      "borderColor": "#C4C4C4",
      "borderRadius": 10,
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "marginVertical": 4,
      "paddingHorizontal": 8,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Choice 2"
    rejectResponderTermination={true}
    style={
      Object {
        "flex": 1,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View />
  </View>
</View>
`;

exports[`component PollItem PollItem snapshot 1`] = `
<View
  style={
    Object {
      "borderColor": "#C4C4C4",
      "borderRadius": 10,
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "marginVertical": 4,
      "paddingHorizontal": 8,
    }
  }
>
  <Component
    allowFontScaling={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Choice 2"
    rejectResponderTermination={true}
    style={
      Object {
        "flex": 1,
      }
    }
    underlineColorAndroid="transparent"
  />
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "justifyContent": "center",
        "paddingHorizontal": 8,
      }
    }
  >
    <Memo(IcClearCircle)
      height={20}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
      width={20}
    />
  </ForwardRef>
</View>
`;
